--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="icon" href="favicon.ico">
-    <title>Lawrence Roleplay</title>
+    <link rel="icon" href="favicon.png" type="icon">
+    <title>Lawrence Roleplay</title> 
 </head>
 <body id="main">
         <div class="container">
@@ -17,8 +17,8 @@
         <div class="menu">
         <ul>
             <li class="menu__item active"><a href="">INICIO</a></li>
-            <!--<li class="menu__item"><a href="https://seoul-rp.net/foro">FORO</a></li>
-            <li class="menu__item"><a href="https://www.instagram.com/seoul.roleplay/" target="_blank">INSTAGRAM</a></li>-->
+        <!--    <li class="menu__item"><a href="facciones.html">FACCIONES</a></li> -->
+            <li class="menu__item"><a href="normativas.html" target="_blank">NORMATIVAS</a></li>
             <li class="menu__item"><a href="https://dsc.gg/lawrencerp" target="_blank">DISCORD</a></li>
         </ul>
         </div>
